--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,17 @@
         android:id="@+id/textHello"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:scrollbars="vertical"
-        android:scrollbarTrackVertical="@color/cardview_dark_background"
+        android:background="@color/black"
         android:fadeScrollbars="false"
+        android:fontFamily="monospace"
         android:gravity="bottom"
+        android:paddingStart="5sp"
+        android:paddingEnd="5sp"
+        android:scrollbarTrackVertical="@color/cardview_dark_background"
+        android:scrollbars="vertical"
         android:singleLine="false"
         android:text="Hello World!"
         android:textColor="@android:color/secondary_text_dark_nodisable"
-        android:background="@color/black"
-        android:fontFamily="monospace"
-        android:paddingStart="5sp"
-        android:paddingEnd="5sp"
         app:layout_constraintBottom_toBottomOf="@+id/guideline1"
         app:layout_constraintEnd_toEndOf="@+id/guideline4"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
@@ -31,7 +31,8 @@
         android:id="@+id/leftBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onLeftClick"
+        android:onClick="buttonClick"
+        android:tag="temp"
         android:text="@string/left_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -43,7 +44,8 @@
         android:id="@+id/rightBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onRightClick"
+        android:onClick="buttonClick"
+        android:tag="shutdown"
         android:text="@string/right_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -101,12 +103,13 @@
         android:id="@+id/clearBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="buttonClick"
+        android:tag="clear"
         android:text="@string/clear_button"
-        android:onClick="clearScreen"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline5" />
+        app:layout_constraintEnd_toStartOf="@+id/guideline4"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/rightBtn" />
 
     <androidx.constraintlayout.widget.Barrier
         android:layout_width="wrap_content"
@@ -128,5 +131,17 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="591dp" />
+
+    <Button
+        android:id="@+id/spaceButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="buttonClick"
+        android:tag="disk"
+        android:text="@string/disk_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintStart_toStartOf="@+id/guideline3"
+        app:layout_constraintTop_toBottomOf="@+id/leftBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
